add all project files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+  <div class="box"></div>
   <div class="card">
       <img src="images/illustration-woman-online-mobile.svg" class="card__img" alt="woman online illustration">
       <div class="card__content">
